[package]
name = "dune_staking_rewards_solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.29.0" }
anchor-spl = { version = "=0.29.0", features = ["metadata", "memo"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "=0.5.0" }
spl-memo = {version = "4.0.0"}
solana-program = { version = "=1.17.22" }